--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.4.0'
 }
 
-group = 'io.izzel.taboolib.example'
+group = 'ray.mintcat.wizard'
 version = '1.0.0'
 
 sourceCompatibility = '1.8'
